2008-05-04  Marcus D. Hanwell  <marcus@cryos.org>

	* libavogadro/src/tools/autoopttool.cpp: Add checks in for whether the
	force field was initialised correctly.

	* libavogadro/src/engines/orbitalengine.*: More updates to the orbital
	engine to improve rendering consistency.

	* libavogadro/src/extensions/orbitalextension.cpp: Fixed another
	crasher - when no basis set has been loaded.

2008-05-03  Marcus D. Hanwell  <marcus@cryos.org>

	* libavogadro/src/extensions/orbitalextension.cpp: Corrected the MO
	numbering in the cube titles.

	* libavogadro/src/engines/orbitalengine.*: Added some settings
	persistence, improved the quickRender a little too.

	* libavogadro/src/tools/clickmeasuretool.*: More guarded pointers to
	prevent crashing caused by dangling pointers.

	* libavogadro/src/glwidget.cpp: Only switch to quickRender on mouse
	move, not press.

	* libavogadro/src/tools/aligntool.*: Used guarded pointers (QPointer)
	to make the align tool much harder to crash.

2008-05-02  Marcus D. Hanwell  <marcus@cryos.org>

	* libavogadro/src/extensions/orbitaldialog.*,
	libavogadro/src/extensions/orbitalextension.*: Adding some extra
	detail on the cube parameters along with the ability to modify this.
	Also added a little extra debug output while support if improved.

2008-04-30  Marcus D. Hanwell  <marcus@cryos.org>

	* libavogadro/src/extensions/gaussianinputdialog.*: Added several new
	options and modifications based upon discussion in bug 1954113.
	Editing of the text edit box still needs to be added.

	* avogadro/src/mainwindow.cpp, avogadro/src/mainwindow.ui: Updated
	with new view menu actions for axes and debug information.

	* libavogadro/src/glwidget.cpp: Update the display after axes or debug
	rendering is turned on or off.

2008-04-29  Geoffrey Hutchison  <babel@geoffhutchison.net>

	*  libavogadro/src/tools/align.png,
	libavogadro/src/tools/aligntool.cpp,
	libavogadro/src/tools/aligntool.qrc: New icon for align tool.
